@@ -174,6 +174,12 @@ II) MAJOR CHANGES FROM PREVIOUS RELEASES
   14) The Epson Stylus CX8300 and CX8400 now print correctly, although
      the colors may be retuned before final release.
 
+  15) Additional resolutions of 360 DPI Enhanced, 720x360 DPI
+     Enhanced, and 720 DPI High Quality have been added for the Epson
+     Stylus C110 and C120 to reduce banding at the expense of some
+     output performance.  These offer improvements primarily for
+     grayscale output.
+
 
 * CHANGES FROM GUTENPRINT 5.2.0-BETA2:
 
